# samplegraph

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
client/: .prettierignore  package-lock.json  package.json
client/public/: index.html
client/src/: App.tsx  ErrorPage.tsx  Graph.tsx  Landing.tsx  Root.tsx  index.scss  index.tsx
client/src/bindings/: GraphResponse.d.ts  SearchHit.d.ts  SearchResponse.d.ts  SongInfo.d.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/styles/: main.scss
frontend/src/bindings/: GraphResponse.d.ts  SearchHit.d.ts  SearchResponse.d.ts  SongInfo.d.ts
frontend/src/components/: ErrorMsg.vue  GraphComponent.vue  SearchBar.vue
frontend/src/router/: index.ts
frontend/src/utils/: error.ts
frontend/src/views/: GraphView.vue  HomeView.vue
server/: Cargo.toml
server/src/: main.rs  types.rs
src/: cache.rs  error.rs  graph.rs  lib.rs  main.rs  state.rs  types.rs
