[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.4.0", features = ["__compress"] }
actix-web-lab = { version = "0.19.1", features = ["spa"] }
env_logger = "0.10.0"
flate2 = "1.0.28"
futures = "0.3.28"
http = "0.2.9"
log = "0.4.20"
megamind = "0.12.0"
petgraph = { version = "0.6.4", features = ["serde-1"] }
redis = { version = "0.23.3", features = ["aio", "tokio-comp", "tokio-native-tls-comp", "tls"] }
reqwest = "0.11.22"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
ts-rs = { version = "7.0.0", features = ["serde-compat"] }
